admindashboard is corrected

--- a/backend/.env
+++ b/backend/.env
@@ -8,8 +8,9 @@ DB_USERNAME=echoverse
 DB_PASSWORD=12345678
 
 # Hugging Face Configuration (Recommended)
+# https://huggingface.co/ibm-granite/granite-3.3-2b-instruct
 HUGGINGFACE_API_TOKEN=
-HUGGINGFACE_TEXT_MODEL=google/flan-t5-base
+HUGGINGFACE_TEXT_MODEL=ibm-granite/granite-3.3-2b-instruct
 HUGGINGFACE_TTS_MODEL=microsoft/speecht5_tts
 
 # IBM Watsonx LLM Configuration (Alternative)
