removed deployment file use only for the local devlopment

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://echoverse-backend-dpza.onrender.com  # e.g., https://your-backend.herokuapp.com or your render/railway URL
-REACT_APP_ENV=development  # or 'production' when deploying
+REACT_APP_API_URL=http://localhost:5000
+REACT_APP_ENV=development
