--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,8 @@
 # EchoVerse Backend Configuration
+
+# Flask Environment
+FLASK_ENV=development  # Set to 'production' for deployment
+
 # Database Configuration
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -21,7 +25,3 @@ WATSONX_PROJECT_ID=YOUR_PROJECT_ID
 # IBM Watson Text-to-Speech Configuration (Alternative)
 TTS_API_KEY=YOUR_TTS_API_KEY
 TTS_URL=https://api.us-south.text-to-speech.watson.cloud.ibm.com
-
-# Flask Configuration
-FLASK_ENV=development
-FLASK_DEBUG=True
